# naja-verilog

./: .codecov.yml  .gitignore  AUTHORS  CMakeLists.txt  README.md
.github/workflows/: build-ubuntu20-04.yml  build.yml  codeql-analysis.yml  coverage.yml  emscripten.yml  macos-build.yml  ubuntu-build.yml  valgrind.yml
.reuse/: dep5
cmake/: CMakeLists.txt  FindNajaVerilog.cmake
src/: CMakeLists.txt  NajaVerilogSnippet.cpp  VerilogConstructor.cpp  VerilogConstructor.h  VerilogException.h  VerilogParser.yy  VerilogPreprocessor.cpp  VerilogPreprocessor.h  VerilogScanner.h  VerilogScanner.ll  VerilogTypes.cpp  VerilogTypes.h
test/: CMakeLists.txt  NajaVerilogTest012.cpp  NajaVerilogTest10.cpp  NajaVerilogTest11.cpp  NajaVerilogTest12.cpp  NajaVerilogTest13.cpp  NajaVerilogTest14.cpp  NajaVerilogTest15.cpp  NajaVerilogTest16.cpp  NajaVerilogTest17.cpp  NajaVerilogTest3.cpp  NajaVerilogTest4.cpp  NajaVerilogTest5.cpp  NajaVerilogTest6.cpp  NajaVerilogTest7.cpp  NajaVerilogTest8.cpp  NajaVerilogTest9.cpp  NajaVerilogTestErrors.cpp  NajaVerilogTestMultipleFiles.cpp  NajaVerilogTestPreprocess.cpp  NajaVerilogTestSize.cpp  VerilogConstructorTest.cpp  VerilogConstructorTest.h
test/benchmarks/: module0.v  preprocess_define_missing_name.v  preprocess_elsif_returns.v  preprocess_ifdef_missing_name.v  preprocess_include.v  preprocess_top.v  preprocess_unexpected_elsif.v  test0.v  test10.v  test11.v  test12.v  test13.v  test14.v  test15.v  test16.v  test17.v  test2.v  test3.v  test4.v  test5.v  test6.v  test7.v  test8.v  test9.v
test/benchmarks/errors/: error0.v  error1.v  error2.v
test/benchmarks/multifiles/: mod0.v  mod1.v  top.v
test/benchmarks/preprocess/: preprocess_block_comment.v  preprocess_define_inactive.v  preprocess_else_parent_inactive.v  preprocess_elsif.v  preprocess_elsif_missing_name.v  preprocess_elsif_returns.v  preprocess_empty_directive.v  preprocess_ifndef_missing_name.v  preprocess_include_inactive.v  preprocess_include_missing_file.v  preprocess_include_missing_quotes.v  preprocess_include_recursive.v  preprocess_include_unreadable.v  preprocess_include_unterminated.v  preprocess_paths_with_macro.v  preprocess_plain_parse_paths.v  preprocess_string_escape.v  preprocess_timescale_active.v  preprocess_timescale_inactive.v  preprocess_unclosed_ifdef.v  preprocess_undef.v  preprocess_undef_missing_name.v  preprocess_undefined_macro_passthrough.v  preprocess_unexpected_else.v  preprocess_unexpected_endif.v  preprocess_unsupported_directive.v
